@@ -42,6 +42,7 @@ class ModelAssertionBuilder(State):
         # Information passed between states.
         self.rootfs = None
         self.rootfs_size = 0
+        self.rootfs_offset = 0
         self.image_size = 0
         self.bootfs = None
         self.bootfs_sizes = None
@@ -73,6 +74,7 @@ class ModelAssertionBuilder(State):
             root_img=self.root_img,
             rootfs=self.rootfs,
             rootfs_size=self.rootfs_size,
+            rootfs_offset=self.rootfs_offset,
             unpackdir=self.unpackdir,
             )
         return state
@@ -93,6 +95,7 @@ class ModelAssertionBuilder(State):
         self.root_img = state['root_img']
         self.rootfs = state['rootfs']
         self.rootfs_size = state['rootfs_size']
+        self.rootfs_offset = state['rootfs_offset']
         self.unpackdir = state['unpackdir']
 
     def _log_exception(self, name):
@@ -281,6 +284,11 @@ class ModelAssertionBuilder(State):
         assert len(volumes) == 1, 'For now, only one volume is allowed'
         volume = list(volumes)[0]
         for partnum, part in enumerate(volume.structures):
+            # The root file system implicitly lives right after the farthest
+            # out structure, which may not be the last named structure in the
+            # gadget.yaml.
+            self.rootfs_offset = max(
+                self.rootfs_offset, (part.offset + part.size))
             part_img = os.path.join(self.images, 'part{}.img'.format(partnum))
             self.boot_images.append(part_img)
             run('dd if=/dev/zero of={} count=0 bs={} seek=1'.format(
@@ -295,14 +303,12 @@ class ModelAssertionBuilder(State):
                 # XXX: hard-coding of sector size
                 run('mkfs.vfat -s 1 -S 512 -F 32 {} {}'.format(
                     label_option, part_img))
-            # XXX: Does not handle the case of partitions at the end of the
-            # image.
-            next_avail = part.offset + part.size
-        # The image for the root partition.
-        #
-        # XXX: Hard-codes last 34 512-byte sectors for backup GPT,
-        # empirically derived from sgdisk behavior.
-        calculated = ceil((self.rootfs_size + next_avail) / 1024 + 17) * 1024
+        # Sanity check whether everything will fit on the disk if an explicit
+        # size was given on the command line.  XXX: This hard-codes last 34
+        # 512-byte sectors for backup GPT, empirically derived from sgdisk
+        # behavior.
+        calculated = ceil(
+            (self.rootfs_offset + self.rootfs_size) / 1024 + 17) * 1024
         if self.args.image_size is None:
             self.image_size = calculated
         else:
@@ -313,6 +319,7 @@ class ModelAssertionBuilder(State):
                 self.image_size = calculated
             else:
                 self.image_size = self.args.image_size
+        # The image for the root partition.
         self.root_img = os.path.join(self.images, 'root.img')
         # Create empty file with holes.
         with open(self.root_img,  'w'):
@@ -417,18 +424,20 @@ class ModelAssertionBuilder(State):
             part_id += 1
             # Put the rootfs after the farthest out structure, which may not
             # be the last named structure in the gadget.yaml.
-            root_offset = max(root_offset, (part.offset + part.size) // MiB(1))
+            root_offset = max(root_offset, (part.offset + part.size))
         # Create and write the main snappy writable partition (i.e. rootfs) as
         # the last partition.
+        root_offset_mib = self.rootfs_offset // MiB(1)
+        root_size_kib = ceil(self.rootfs_size / 1024)
         image.partition(
             part_id,
-            new='{}M:+{}K'.format(root_offset, ceil(self.rootfs_size / 1024)),
+            new='{}M:+{}K'.format(root_offset_mib, root_size_kib),
             typecode=('83', '0FC63DAF-8483-4772-8E79-3D69D8477DE4'))
         if volume.schema is VolumeSchema.gpt:
             image.partition(part_id, change_name='writable')
         image.copy_blob(
             self.root_img,
-            bs='1M', seek=root_offset,
+            bs='1M', seek=root_offset_mib,
             count=ceil(self.rootfs_size / MiB(1)),
             conv='notrunc')
         for value, dest in offset_writes:
